// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/Member/Modal/AddMemberGroup should add fields when click add button 1`] = `
<body>
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-row css-cubq3u css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="roles_0_role_uid"
                  title="平台角色"
                >
                  平台角色
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="roles_0_role_uid_list_0"
                            aria-autocomplete="list"
                            aria-controls="roles_0_role_uid_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="roles_0_role_uid_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="roles_0_role_uid"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择平台角色
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-12 ant-col-offset-1 css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="roles_0_range_uids"
                  title="操作范围"
                >
                  操作范围
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="roles_0_range_uids_list_0"
                                aria-autocomplete="list"
                                aria-controls="roles_0_range_uids_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="roles_0_range_uids_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="roles_0_range_uids"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择操作范围
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-0 css-dev-only-do-not-override-txh9fw"
        >
          <input
            class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
            id="roles_0_op_range_type"
            placeholder="请输入{{name}}"
            type="text"
            value="db_service"
          />
        </div>
        <div
          class="ant-col ant-col-1 ant-col-offset-1 css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-no-colon"
                  title=" "
                >
                   
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only basic-button-wrapper css-iieact"
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.00016 14.6667C4.31816 14.6667 1.3335 11.682 1.3335 8.00004C1.3335 4.31804 4.31816 1.33337 8.00016 1.33337C11.6822 1.33337 14.6668 4.31804 14.6668 8.00004C14.6668 11.682 11.6822 14.6667 8.00016 14.6667ZM4.66683 7.33337V8.66671H11.3335V7.33337H4.66683Z"
                            fill="#F66074"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default member-form-add-button basic-button-wrapper css-1719g3l"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.00016 13.6667C3.31816 13.6667 0.333496 10.682 0.333496 7.00004C0.333496 3.31804 3.31816 0.333374 7.00016 0.333374C10.6822 0.333374 13.6668 3.31804 13.6668 7.00004C13.6668 10.682 10.6822 13.6667 7.00016 13.6667ZM6.3335 6.33337H3.66683V7.66671H6.3335V10.3334H7.66683V7.66671H10.3335V6.33337H7.66683V3.66671H6.3335V6.33337Z"
                        fill="#4583FF"
                      />
                    </svg>
                  </span>
                  <span>
                    添加平台角色与操作范围
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`base/Member/Modal/AddMemberGroup should match snap shot 1`] = `
<body>
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default member-form-add-button basic-button-wrapper css-1719g3l"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.00016 13.6667C3.31816 13.6667 0.333496 10.682 0.333496 7.00004C0.333496 3.31804 3.31816 0.333374 7.00016 0.333374C10.6822 0.333374 13.6668 3.31804 13.6668 7.00004C13.6668 10.682 10.6822 13.6667 7.00016 13.6667ZM6.3335 6.33337H3.66683V7.66671H6.3335V10.3334H7.66683V7.66671H10.3335V6.33337H7.66683V3.66671H6.3335V6.33337Z"
                        fill="#4583FF"
                      />
                    </svg>
                  </span>
                  <span>
                    添加平台角色与操作范围
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;
